--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -48,3 +48,128 @@ body {
   overflow: auto;
   margin-bottom: 100px;
 }
+
+.navbar-default {
+  background-color: #ffffff;
+  border-color: #e0dfe1;
+}
+.navbar-default .navbar-brand {
+  color: #989196;
+}
+.navbar-default .navbar-brand:hover,
+.navbar-default .navbar-brand:focus {
+  color: #2b0069;
+}
+.navbar-default .navbar-text {
+  color: #989196;
+}
+.navbar-default .navbar-nav > li > a {
+  color: #989196;
+}
+.navbar-default .navbar-nav > li > a:hover,
+.navbar-default .navbar-nav > li > a:focus {
+  color: #2b0069;
+}
+.navbar-default .navbar-nav > li > .dropdown-menu {
+  background-color: #ffffff;
+}
+.navbar-default .navbar-nav > li > .dropdown-menu > li > a {
+  color: #989196;
+}
+.navbar-default .navbar-nav > li > .dropdown-menu > li > a:hover,
+.navbar-default .navbar-nav > li > .dropdown-menu > li > a:focus {
+  color: #2b0069;
+  background-color: #e0dfe1;
+}
+.navbar-default .navbar-nav > li > .dropdown-menu > li.divider {
+  background-color: #e0dfe1;
+}
+.navbar-default .navbar-nav .open .dropdown-menu > .active > a,
+.navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover,
+.navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
+  color: #2b0069;
+  background-color: #e0dfe1;
+}
+.navbar-default .navbar-nav > .active > a,
+.navbar-default .navbar-nav > .active > a:hover,
+.navbar-default .navbar-nav > .active > a:focus {
+  color: #2b0069;
+  background-color: #e0dfe1;
+}
+.navbar-default .navbar-nav > .open > a,
+.navbar-default .navbar-nav > .open > a:hover,
+.navbar-default .navbar-nav > .open > a:focus {
+  color: #2b0069;
+  background-color: #e0dfe1;
+}
+.navbar-default .navbar-toggle {
+  border-color: #e0dfe1;
+}
+.navbar-default .navbar-toggle:hover,
+.navbar-default .navbar-toggle:focus {
+  background-color: #e0dfe1;
+}
+.navbar-default .navbar-toggle .icon-bar {
+  background-color: #989196;
+}
+.navbar-default .navbar-collapse,
+.navbar-default .navbar-form {
+  border-color: #989196;
+}
+.navbar-default .navbar-link {
+  color: #989196;
+}
+.navbar-default .navbar-link:hover {
+  color: #2b0069;
+}
+
+@media (max-width: 767px) {
+  .navbar-default .navbar-nav .open .dropdown-menu > li > a {
+    color: #989196;
+  }
+  .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover,
+  .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
+    color: #2b0069;
+  }
+  .navbar-default .navbar-nav .open .dropdown-menu > .active > a,
+  .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover,
+  .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
+    color: #2b0069;
+    background-color: #e0dfe1;
+  }
+}
+
+.thumbnail {
+    width: 320px;
+    height: 240px;
+}
+
+.image {
+    width: 100%;
+    height: 100%;    
+}
+
+.image img {
+    -webkit-transition: all 1s ease; /* Safari and Chrome */
+    -moz-transition: all 1s ease; /* Firefox */
+    -ms-transition: all 1s ease; /* IE 9 */
+    -o-transition: all 1s ease; /* Opera */
+    transition: all 1s ease;
+}
+
+.image:hover img {
+    -webkit-transform:scale(1.25); /* Safari and Chrome */
+    -moz-transform:scale(1.25); /* Firefox */
+    -ms-transform:scale(1.25); /* IE 9 */
+    -o-transform:scale(1.25); /* Opera */
+     transform:scale(1.25);
+}
+
+.losticon{
+
+  background-image: url(../images/lost.svg);
+background-repeat: no-repeat;
+    background-position: left;
+        padding-left: 19px;
+    font-size: 19px;
+}
